fix: add margin bottom to no result message, no more content jumping when searching

--- a/pages/home/home.module.css
+++ b/pages/home/home.module.css
@@ -122,3 +122,7 @@
 .itemSubInfo p:first-of-type {
 	text-transform: uppercase;
 }
+
+.noResultText {
+	margin-bottom: 18.6rem;
+}
